[package]
name = "robbot"
version = "0.3.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies.libsqlite3-sys]
version = "0.9.1"
features = ["bundled"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.dcc-scryfall]
git = "https://github.com/dcchut/dcc-scryfall"

[dependencies.code-sandbox]
git = "https://github.com/dcchut/code-sandbox"

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.10"

[dependencies.tokio]
version = "1.4"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.2"

[dependencies.dotenv]
version = "0.15"

[dependencies.chrono]
version = "0.4"

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "chrono"]

[dependencies.chrono-humanize]
version = "0.1.2"

[dependencies.probability]
version = "0.17"