[package]
name = "robbot"
version = "0.3.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies.libsqlite3-sys]
version = "0.22.1"
features = ["bundled"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.dcc-scryfall]
git = "https://github.com/dcchut/dcc-scryfall"

[dependencies.serenity]
features = ["framework", "standard_framework"]
git = "https://github.com/dcchut/serenity"
branch = "serenity-async-await"

[dependencies.tokio]
version = "1.10"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.9"

[dependencies.dotenv]
version = "0.15"

[dependencies.chrono]
version = "0.4"

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "chrono"]

[dependencies.chrono-humanize]
version = "0.2.1"

[dependencies.probability]
version = "0.17"