[package]
name = "robbot"
version = "0.3.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"

[dependencies.anyhow]
version = "1.0"

[dependencies.chrono]
version = "0.4"

[dependencies.chrono-humanize]
version = "0.2"

[dependencies.code-sandbox]
git = "https://github.com/dcchut/code-sandbox"

[dependencies.dcc-scryfall]
git = "https://github.com/dcchut/dcc-scryfall"

[dependencies.dotenv]
version = "0.15"

[dependencies.envy]
version = "0.4"

[dependencies.governor]
version = "0.4"

[dependencies.once_cell]
version = "1.13"

[dependencies.probability]
version = "0.18"

[dependencies.reqwest]
version = "0.11"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serenity]
version = "0.11"
features = ["unstable_discord_api"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"]

[dependencies.tokio]
version = "1.20"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
